--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="translucent">#66000000</color>
+    <color name="transparent">#00000000</color>
+    <color name="white">#ffffff</color>
+    <color name="translucent_white">#88ffffff</color>
+
+    <color name="divider">#22000000</color>
+
+    <!--文字颜色-->
+    <color name="text_black">#bb000000</color>
+    <color name="text_dark_gray">#66000000</color>
+    <color name="text_gray">#33000000</color>
+    <color name="text_light_gray">#18000000</color>
 </resources>
