--- a/app/src/main/res/layout/left_content.xml
+++ b/app/src/main/res/layout/left_content.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/tv_notice_title"
                 android:layout_width="400dp"
                 android:layout_height="wrap_content"
-                android:text="最新公告"
+                android:text="@string/notice_title"
                 android:textColor="@color/text_black"
                 android:textSize="20sp" />
 
@@ -41,7 +41,7 @@
                 android:layout_width="400dp"
                 android:layout_height="wrap_content"
                 android:minHeight="100dp"
-                android:text="最新公告.....最新公告.....最新公告.....最新公告.....最新公告.....最新公告.....最新公告....."
+                android:text="暂无公告."
                 android:textColor="@color/text_black"
                 android:textSize="20sp" />
         </LinearLayout>
