--- a/app/src/main/res/layout/right_content.xml
+++ b/app/src/main/res/layout/right_content.xml
@@ -213,6 +213,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/tv_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
